@@ -1,5 +1,9 @@
 1.21
  * Fix Python 2.3 compatibility (broken in 1.19).
+ * ID3:
+   * MakeID3v1: Do not generate bad tags when given short dates. (#69)
+   * ParseID3v1: Parse short (< 128 byte) tags generated by old Mutagen
+     implementations of MakeID3v1, and tags with garbage on the front.
  * Use 'open' rather than 'file' everywhere. (#74, Dan Callahan)
 
 1.20 - 2010.08.04
